--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,6 @@
 bin_PROGRAMS = runzip
 
 runzip_SOURCES = runzip.c UTF8String.c UTF8String.h
-runzip_CFLAGS = -Wall -I../libzip-0.7.1/lib
-runzip_LDADD = ../libzip-0.7.1/lib/libzip.la
+runzip_CFLAGS = -Wall -I$(top_srcdir)/libzip-0.7.1/lib
+runzip_LDADD = $(top_builddir)/libzip-0.7.1/lib/libzip.la
 
