--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ sudo: false
 compiler:
   - gcc
   - clang
-script: autoreconf -iv && ./configure && make
+script: autoreconf -iv && ./configure && make check
