--- a/configure.ac
+++ b/configure.ac
@@ -15,5 +15,7 @@ AM_PROG_LIBTOOL
 AC_CHECK_HEADERS(iconv.h)
 AC_CHECK_LIB(iconv, iconv_open)
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile
+                src/Makefile
+                tests/Makefile])
 AC_OUTPUT
