--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,10 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AM_PROG_LIBTOOL
 
-AC_CHECK_HEADERS(iconv.h)
-AC_CHECK_LIB(iconv, iconv_open)
+AC_CHECK_LIB(iconv, iconv_open, [],
+	[AC_MSG_FAILURE([libiconv is missing. Install iconv first.])])
+AC_CHECK_HEADERS(iconv.h, [],
+	[AC_MSG_FAILURE([iconv.h is missing.])])
 
 AC_CONFIG_FILES([Makefile
                 src/Makefile
