fixes for tests

--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,8 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AM_PROG_LIBTOOL
 
+CFLAGS="$CFLAGS -I/usr/local/include"
+LDFLAGS="$LDFLAGS -L/usr/local/lib"
 AC_CHECK_LIB(iconv, iconv_open, [],
 	[AC_MSG_FAILURE([libiconv is missing. Install iconv first.])])
 AC_CHECK_HEADERS(iconv.h, [],
