compile and test on freebsd

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,6 @@
 
 bin_PROGRAMS = runzip
 
-runzip_CFLAGS = -W -Wall -Werror -I$(top_srcdir)/libzip-0.7.1/lib -std=gnu99
+runzip_CFLAGS = -W -Wall -I$(top_srcdir)/libzip-0.7.1/lib -std=gnu99
 runzip_LDADD = $(top_builddir)/libzip-0.7.1/lib/libzip.la
 
